# FileFlow

./: .gitignore  README.md  index.html  jest.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: depandabot.yml
.github/workflows/: ci.yaml  ci.yml  main.yml
src/: App.tsx  Home.tsx  Layout.tsx  Loader.css  Loader.tsx  Menu.tsx  main.tsx
src-tauri/: Cargo.toml  database_config.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: database_connection.rs  fast_insert.rs  lib.rs  main.rs  optimized_insert.rs
src-tauri/src/benches/: application_bench.rs  mod.rs
src-tauri/src/database_connection/: db_config.rs  insert_config.rs  save_config.rs
src-tauri/src/fileflow/: constants.rs  database_connection.rs  db_config.rs  fast_insert.rs  fileflow.rs  fileflowlib.rs  insert_config.rs  mod.rs  optimized_insert.rs
src-tauri/src/fileflow/action/: actions.rs  database_actions.rs  database_command.rs  insertion_mode.rs  mod.rs
src-tauri/src/fileflow/database/: connection.rs  database_actions.rs  database_connection.rs  mod.rs  sql_builder.rs
src-tauri/src/fileflow/enumeration/: database_engine.rs  insertion_type.rs  mod.rs  separator.rs
src-tauri/src/fileflow/struct/: combo_item.rs
src-tauri/src/fileflow/stuct/: db_config.rs  download_config.rs  insert_config.rs  load_data_struct.rs  mod.rs  save_config.rs  string_formater.rs
src-tauri/src/fileflow/utils/: constants.rs  csv_utils.rs  fileflowlib.rs  mod.rs  sql.rs  string_formater.rs
src-tauri/src/tests/: action_test.rs  csv_utils_test.rs  database_test.rs  mod.rs  standard_test.rs  string_formater_test.rs  struct_test.rs  tests.rs  utils.rs  utils_tests.rs
src/__tests__/: DatabaseEngineType.test.tsx  SeparatorType.test.tsx
src/components/fileflowui/: About.tsx  ButtonGroupComponent.tsx  FileUploadComponent.tsx  FormComponent.tsx  Loader.tsx  LogComponent.tsx  Menu.tsx  ModeSelectionComponent.tsx  SelectDatabaseComponent.tsx  SqliteFormComponent.tsx
src/components/fileflowui/copy/: Copy.tsx
src/components/fileflowui/extract/download/: Download.tsx
src/components/fileflowui/help/: HelpDownload.tsx  HelpInsert.tsx
src/components/fileflowui/home/: ButtonConfig.tsx  ButtonGroupAction.tsx  ButtonGroupComponent.tsx  ConfigItemList.tsx  FormComponent.tsx  Home.tsx  HomeForm.tsx  Log.tsx  LogComponent.tsx  Menu.tsx  ModeSelection.tsx  SqliteForm.tsx  SqliteFormComponent.tsx
src/components/fileflowui/insert/: ButtonConfig.tsx  ButtonGroupAction.tsx  ConfigItemList.tsx  Insert.tsx  InsertForm.tsx  SqliteForm.tsx
src/components/fileflowui/load/: FormLoadData.tsx  LoadButtonGroupAction.tsx  LoadButtonGroupComponent.tsx  LoadDataSql.tsx
src/components/fileflowui/load/insert/: ButtonConfig.tsx  ButtonGroupAction.tsx  ConfigItemList.tsx  Insert.tsx  InsertForm.tsx  ModeSelection.tsx  SqliteForm.tsx
src/components/fileflowui/load/upload/: FormLoadData.tsx  LoadButtonGroupAction.tsx  LoadDataSql.tsx
src/components/fileflowui/other/: About.tsx  Help.tsx
src/components/fileflowui/style/: FileUploadComponent.tsx  Loader.tsx  Menu.tsx
src/components/hooks/: ComboboxComponent.tsx  Menu.tsx  utils.tsx
src/components/hooks/component/: CheckBoxCombo.tsx  ComboItem.tsx  ComboboxComponent.tsx  ConfigItemList.tsx
src/components/hooks/database/: ConnectionForm.tsx  DatabaseDialog.tsx  DatabaseForm.tsx  SelectDatabase.tsx  SelectDatabaseConfig.tsx  SelectDatabaseEngine.tsx  SqliteForm.tsx
src/components/hooks/file/: DirectoryUpload.tsx  FileUpload.tsx  InputTextDialog.tsx
src/components/object/: initialState.tsx
src/components/states/: Item.tsx  generateSqlConfig.tsx  initialState.tsx
src/components/ui/: dropdown-menu.tsx  menubar.tsx
src/hooks/data/: ConnectionForm.tsx  DatabaseDialog.tsx  DatabaseForm.tsx  FileUpload.tsx  SelectDatabaseConfig.tsx  SqliteForm.tsx
src/interfaces/: DatabaseConfig.tsx  DatabaseFormProps.tsx
src/state/: DatabaseEngineType.tsx  SeparatorType.tsx
