[package]
name = "FileFlow"
version = "1.0.1"
description = "An app to manipulate DBMS tables"
authors = ["Maxime-Cllt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "mysql", "postgres", "sqlite"] }
tokio = { version = "1.42.0", features = ["rt", "macros"] }
csv = "1.3.1"
tauri-plugin-dialog = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[dev-dependencies]
criterion = "*"
pprof = { version = "*", features = ["flamegraph", "criterion"] }

#[[bench]]
#name = "bench_sql"
#harness = false
#path = "src/benches/bench_sql.rs"

[profile.dev]
incremental = true
codegen-units = 20
opt-level = 0
panic = "unwind"
debug = true
lto = false
overflow-checks = true


[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = false
lto = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
