[package]
name = "FileFlow"
version = "1.0.4"
description = "An app to manipulate DBMS tables"
authors = ["Maxime-Cllt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "mysql", "postgres", "sqlite"] }
tokio = { version = "1.42.0", features = ["rt", "macros"] }
csv = "1.3.1"
tauri-plugin-dialog = "2"


[lib]
name = "fileflow"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[dev-dependencies]
criterion = "0.6.0"

[profile.dev]
incremental = true
codegen-units = 256
opt-level = 0
panic = "unwind"
debug = true
lto = false
overflow-checks = true


[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = false
lto = true


# Optimized profile for benchmark builds
[profile.bench]
incremental = true
codegen-units = 16
opt-level = 1
panic = "unwind"
debug = 1
lto = "thin"
overflow-checks = false


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"


[[bench]]
name = "benchmark_application"
harness = false
path = "src/benches/application_bench.rs"
